--- a/LightWeight/onnx_convert.ipynb
+++ b/LightWeight/onnx_convert.ipynb
@@ -31,18 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys,os\n",
     "sys.path.append(\"..\")\n",
-    "from models.utils import UNet"
+    "from utils import UNet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,12 +59,12 @@
    "source": [
     "model = UNet().to('cuda')\n",
     "#load weight\n",
-    "model.load_state_dict(torch.load('wieghts/ckpt_290.pt'))"
+    "model.load_state_dict(torch.load('/root/paper_project/ML/weight/ckpt_290.pt'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=L size=64x64>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,13 +83,13 @@
    "source": [
     "from PIL import Image\n",
     "\n",
-    "img = Image.open(\"../data/62570_갊.png\")\n",
+    "img = Image.open(\"/root/paper_project/ML/sample_img/62570_갊.png\")\n",
     "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "torch.Size([1, 64, 64])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "torch.Size([8, 1, 64, 64])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
