--- a/Tools/Metric/test.ipynb
+++ b/Tools/Metric/test.ipynb
@@ -2,56 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "디\n",
-      "늘\n",
-      "없\n",
-      "나\n",
-      "기\n",
-      "도\n",
-      "을\n",
-      "버\n",
-      "러\n",
-      "만\n",
-      "는\n",
-      "깅\n",
-      "를\n",
-      "하\n",
-      "워\n",
-      "했\n",
-      "에\n",
-      "그\n",
-      "로\n",
-      "괴\n",
-      "우\n",
-      "자\n",
-      "한\n",
-      "점\n",
-      "다\n"
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
+      "Loading model from: /usr/local/lib/python3.8/dist-packages/lpips/weights/v0.1/alex.pth\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "ssim_score : [tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.]), tensor([1.])]\n",
+      "[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
+      "(100, 0.0, 1.0)\n"
      ]
     }
    ],
    "source": [
-    "from function import psnr,lpips,SSIM\n",
+    "import lpips\n",
+    "from PIL import Image\n",
     "import os\n",
+    "import numpy as np\n",
+    "from torchvision import transforms\n",
+    "from pytorch_msssim import ssim\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import math\n",
+    "import statistics\n",
     "\n",
-    "original_dir = '/root/paper_project/sample_data'\n",
-    "generate_dir = '/root/paper_project/sample_data'\n",
+    "original_dir = '/root/paper_project/ML/sample_data'\n",
+    "generate_dir = '/root/paper_project/ML/sample_data'\n",
+    "\n",
+    "# psnr\n",
+    "def psnr_cal(img1, img2):\n",
+    "    mse = torch.mean((img1 - img2) ** 2)\n",
+    "    if mse == 0:\n",
+    "        return 100\n",
+    "    PIXEL_MAX = 255.0\n",
+    "    return 20 * math.log10(PIXEL_MAX / torch.sqrt(mse))\n",
     "\n",
     "\n",
-    "for root, dirs, files in os.walk(image_dir):\n",
-    "    for dir in dirs:\n",
-    "        generate_dir_tmp = f'{generate_dir}/{dir}'\n",
-    "        dir_path = os.path.join(root, dir)  \n",
-    "        for filename in os.listdir(dir_path):\n",
-    "            if filename.endswith(('.jpg', '.jpeg', '.png', '.bmp')):\n",
-    "                    pass"
+    "# lpips\n",
+    "def lpips_cal(img1, img2, backborn='alex'):\n",
+    "    assert backborn == 'alex' or 'vgg'\n",
+    "\n",
+    "    loss_fn = lpips.LPIPS(net=backborn)\n",
+    "    return loss_fn.forward(img1, img2)\n",
+    "\n",
+    "def load_image_from_folder(folder_path):\n",
+    "    valid_image_extenstions = ('.jpg', '.jpeg', '.png', '.bmp')\n",
+    "    for root, dirs, files in os.walk(folder_path):\n",
+    "        for file in files:\n",
+    "            if file.lower().endswith(valid_image_extenstions):\n",
+    "                image_path = os.path.join(root, file)\n",
+    "                image = Image.open(image_path)\n",
+    "                image_np = np.array(image)\n",
+    "                transform = transforms.ToTensor()\n",
+    "                image_tensor = transform(image_np)\n",
+    "    return image_tensor\n",
+    "\n",
+    "def cal_score(original_dir,generate_dir):\n",
+    "    psnr_scores = []\n",
+    "    lpips_scores = []\n",
+    "    ssim_scores = []\n",
+    "    folders1 = [f for f in os.listdir(original_dir)if os.path.isdir(os.path.join(original_dir, f))]\n",
+    "    folders2 = [f for f in os.listdir(generate_dir)if os.path.isdir(os.path.join(generate_dir, f))]\n",
+    "\n",
+    "    for folder1, folder2 in zip(folders1, folders2):\n",
+    "        image1 = load_image_from_folder(original_dir+'/'+folder1)\n",
+    "        image2 = load_image_from_folder(generate_dir+'/'+folder2)\n",
+    "        psnr_scores.append(psnr_cal(image1, image2))\n",
+    "        lpips_scores.append(lpips_cal(image1, image2))\n",
+    "        batch_image1 = image1.unsqueeze(0)\n",
+    "        batch_image2 = image2.unsqueeze(0)\n",
+    "        ssim_scores.append(ssim(batch_image1, batch_image2, data_range=255, size_average=False))\n",
+    "    \n",
+    "    mean_psnr_socore = statistics.mean(psnr_scores)\n",
+    "    float_lpips_scores = [tensor.item() for tensor in lpips_scores]\n",
+    "    mean_lpips_socore = statistics.mean(float_lpips_scores)\n",
+    "    float_ssim_socores = [tensor.item() for tensor in ssim_scores]\n",
+    "    mean_ssim_socore = statistics.mean(float_ssim_socores)\n",
+    "    \n",
+    "    return mean_psnr_socore,mean_lpips_socore,mean_ssim_socore\n",
+    "\n",
+    "print(cal_score(original_dir,generate_dir))"
    ]
   }
  ],
